[project]
name = "pylatesttrends"
version = "0.1.0"
description = "Get the latest trends from Google Trends"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Farasat Ali", email = "63093876+faraasat@users.noreply.github.com" },
]
dependencies = ["selenium", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
