[project]
name = "pylatesttrends"
version = "0.1.0"
description = "Get the latest trends from Google Trends"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPLv3" }
authors = [
    { name = "Farasat Ali", email = "63093876+faraasat@users.noreply.github.com" },
]
dependencies = ["selenium", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/faraasat/pylatesttrends"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
